# ManagerXML

./: CMakeLists.txt  data.xml  main.cpp
xml_reader/: combiner.cpp  combiner.h  xml_combiner.cpp  xml_combiner.h  xml_components.h  xml_interface.cpp  xml_interface.h  xml_manager.cpp  xml_manager.h  xml_reader.cpp  xml_reader.h
